--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Ejemplo modelo de caja y selectores">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css">
@@ -9,9 +10,9 @@
 <body>
     <div id="cabecera">
         <ul>
-            <li><a href="">Opcion 1</a></li>
-            <li><a href="">Opcion 2</a></li>
-            <li><a href="">Opcion 3</a></li>
+            <li><a href="./index.html">Opcion 1</a></li>
+            <li><a href="./index.html">Opcion 2</a></li>
+            <li><a href="./index.html">Opcion 3</a></li>
         </ul>
     </div>
     <div class="columna1">
